Shortened links can be overwritten when no more words available upon user's confirmation

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -12116,6 +12116,26 @@ video {
   opacity: 1;
 }
 
+.disabled\:opacity-0:disabled {
+  opacity: 0;
+}
+
+.disabled\:opacity-25:disabled {
+  opacity: 0.25;
+}
+
+.disabled\:opacity-50:disabled {
+  opacity: 0.5;
+}
+
+.disabled\:opacity-75:disabled {
+  opacity: 0.75;
+}
+
+.disabled\:opacity-100:disabled {
+  opacity: 1;
+}
+
 .outline-none {
   outline: 0;
 }
@@ -37640,6 +37660,26 @@ video {
     opacity: 1;
   }
 
+  .sm\:disabled\:opacity-0:disabled {
+    opacity: 0;
+  }
+
+  .sm\:disabled\:opacity-25:disabled {
+    opacity: 0.25;
+  }
+
+  .sm\:disabled\:opacity-50:disabled {
+    opacity: 0.5;
+  }
+
+  .sm\:disabled\:opacity-75:disabled {
+    opacity: 0.75;
+  }
+
+  .sm\:disabled\:opacity-100:disabled {
+    opacity: 1;
+  }
+
   .sm\:outline-none {
     outline: 0;
   }
@@ -63096,6 +63136,26 @@ video {
   }
 
   .md\:focus\:opacity-100:focus {
+    opacity: 1;
+  }
+
+  .md\:disabled\:opacity-0:disabled {
+    opacity: 0;
+  }
+
+  .md\:disabled\:opacity-25:disabled {
+    opacity: 0.25;
+  }
+
+  .md\:disabled\:opacity-50:disabled {
+    opacity: 0.5;
+  }
+
+  .md\:disabled\:opacity-75:disabled {
+    opacity: 0.75;
+  }
+
+  .md\:disabled\:opacity-100:disabled {
     opacity: 1;
   }
 
@@ -88558,6 +88618,26 @@ video {
     opacity: 1;
   }
 
+  .lg\:disabled\:opacity-0:disabled {
+    opacity: 0;
+  }
+
+  .lg\:disabled\:opacity-25:disabled {
+    opacity: 0.25;
+  }
+
+  .lg\:disabled\:opacity-50:disabled {
+    opacity: 0.5;
+  }
+
+  .lg\:disabled\:opacity-75:disabled {
+    opacity: 0.75;
+  }
+
+  .lg\:disabled\:opacity-100:disabled {
+    opacity: 1;
+  }
+
   .lg\:outline-none {
     outline: 0;
   }
@@ -114014,6 +114094,26 @@ video {
   }
 
   .xl\:focus\:opacity-100:focus {
+    opacity: 1;
+  }
+
+  .xl\:disabled\:opacity-0:disabled {
+    opacity: 0;
+  }
+
+  .xl\:disabled\:opacity-25:disabled {
+    opacity: 0.25;
+  }
+
+  .xl\:disabled\:opacity-50:disabled {
+    opacity: 0.5;
+  }
+
+  .xl\:disabled\:opacity-75:disabled {
+    opacity: 0.75;
+  }
+
+  .xl\:disabled\:opacity-100:disabled {
     opacity: 1;
   }
 
@@ -139476,6 +139576,26 @@ video {
     opacity: 1;
   }
 
+  .range\:disabled\:opacity-0:disabled {
+    opacity: 0;
+  }
+
+  .range\:disabled\:opacity-25:disabled {
+    opacity: 0.25;
+  }
+
+  .range\:disabled\:opacity-50:disabled {
+    opacity: 0.5;
+  }
+
+  .range\:disabled\:opacity-75:disabled {
+    opacity: 0.75;
+  }
+
+  .range\:disabled\:opacity-100:disabled {
+    opacity: 1;
+  }
+
   .range\:outline-none {
     outline: 0;
   }
@@ -164932,6 +165052,26 @@ video {
   }
 
   .skip\:focus\:opacity-100:focus {
+    opacity: 1;
+  }
+
+  .skip\:disabled\:opacity-0:disabled {
+    opacity: 0;
+  }
+
+  .skip\:disabled\:opacity-25:disabled {
+    opacity: 0.25;
+  }
+
+  .skip\:disabled\:opacity-50:disabled {
+    opacity: 0.5;
+  }
+
+  .skip\:disabled\:opacity-75:disabled {
+    opacity: 0.75;
+  }
+
+  .skip\:disabled\:opacity-100:disabled {
     opacity: 1;
   }
 
